Functional & Visual Fixes
Functional:
* Turned incorrect letters grey
* Reset game variables at start of new game
* Improved commenting
* Game Loss triggers on last row
* Fixed input screening by using event.keyCodes
* Backspace func works!

Visual:
* Fitted header to h1 title size
* Cleared letterbox text and improved looks
* Added a backup top value to prevent overlapping between gameSpace & header
* Adjusted letterbox size

To-do:
* Refit the fetch request so it only loads once
* Add keyboard at the bottom that displays colours + takes inputs
* Connect API and generate hints
* Other UI fixes

--- a/style.css
+++ b/style.css
@@ -4,14 +4,15 @@
 }
 
 body {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     box-shadow: none;
+    overflow: hidden;
 }
 
 header {
     width: 100%;
-    height: 15%;
+    height: auto;
     position: absolute;
     top: 0%;
     left: 0%;
@@ -22,15 +23,22 @@ header {
     background-color: red;
     color: #fff;
     border-bottom: 5px solid black;
-    font-family: "Pokemon Solid", sans-serif;
+    margin: 0; padding: 0;
     font-size: x-large;
-    font-weight: 100;
+}
+
+#mainTitle {
+    font-family: "Pokemon Solid", sans-serif;
+    margin: 0.1em;
+    margin-top: 0.35em;
 }
 
 main {
     width: 100%;
-    height: 85%;
-    top: 15%;
+    height: calc(100vh - 75px);
+    /* top: 1.45em; */
+    bottom: 0;
+    margin-bottom: 0;
     left: 0%;
     position: absolute;
     z-index: 1;
@@ -73,7 +81,6 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* align-items: center; */
     text-align: center;
     font-size: large;
     font-family: "GB Boot", sans-serif;
@@ -88,31 +95,20 @@ main {
     width: 60%;
     height: auto;
     position: absolute;
-    top: 30%;
+    top: max(30%,140px); /* prevents clipping with the header */
     left: 50%;
-    transform: translate(-50%, -30%);
-    border: 1px solid black;
+    transform: translate(-50%, -30%); /* 30% of gameSpace height is 90px */
 }
 
 .letterbox {
     background-color: #fff;
-    border: 0.5px dashed pink;
-    border-radius: 25%;
-    /* text-align: center; */
-
-    /* position: absolute;
-    top: 50%; left: 50%; 
-    transform: translate(-50%,-50%); */
-
+    border: 1px solid gray;
+    border-radius: 15%;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    font-size: medium;
-    /* width: max(10vh,100px);
-    height: max(10vh,100px); */
-    /* min-height: 100px;
-    min-width: 100px; */
+    font-size: large;
+    margin: 0.5px;
 }
 
 #endScreen {
